# pokemon_api

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  repository.py
app/routes/: health.py  pokemon.py
data/: pokemon_151.json
docs/: fastapi-functionality.md  pokeapi-sample-data.md
tests/: test_api.py
