[project]
name = "pokemon-api"
version = "0.1.0"
description = "Simple FastAPI backend over a cached first-generation Pokemon dataset."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.128.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
